project_files/kubernetes-production-environment/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: db
